Beginning of support for unsigned types ulong, uint, ushort, and ubyte.
git-svn-id: svn://sourceware.org/svn/kawa/trunk@8479 5e0a886f-7f45-49c5-bc19-40643649e37f